noinst_PROGRAMS = \
	callback_xattr \
	static_xattr

callback_xattr_SOURCES = callback_xattr.cc
callback_xattr_LDADD = ../libs3fuse_fs.a ../../base/libs3fuse_base.a ../../crypto/libs3fuse_crypto.a $(LDADD)

static_xattr_SOURCES = static_xattr.cc
static_xattr_LDADD = ../libs3fuse_fs.a ../../crypto/libs3fuse_crypto.a $(LDADD)
